@@ -1,19 +1,19 @@
-.TH PNGCHECK "1" "January 2021" "pngcheck 3.0.1" "User Commands"
+.TH PNGCHECK "1" "January 2021" "pngcheck 3.0.2" "User Commands"
 .SH NAME
-pngcheck \- manual page for pngcheck 3.0.1
+pngcheck \- manual page for pngcheck 3.0.2
 .SH SYNOPSIS
 .B pngcheck
-.RI [ \-7cfpqtv ]
+.RI [ \-7cpqtv ]
 .I file.{png|jng|mng}
 .RI [ file2.{png|jng|mng} \ [...]]
 .br
 .RB ...\ |\  pngcheck
-.RI [ \-7cfpqstvx ]
+.RI [ \-7cpqstvx ]
 .br
 .B pngcheck
-.RI [ \-7cfpqstvx ] \ file-containing-PNGs ...
+.RI [ \-7cpqstvx ] \ file-containing-PNGs ...
 .SH DESCRIPTION
-PNGcheck, version 3.0.1 of 24 January 2021,
+PNGcheck, version 3.0.2 of 31 January 2021,
 by Alexander Lehmann, Andreas Dilger and Greg Roelofs.
 .PP
 Test PNG, JNG or MNG image files for corruption, and print size/type info.
