@@ -250,3 +250,10 @@
  *               fixed a PPLT vulnerability
  * 20210124 GRR: released version 3.0.1
  *               ----------------------
+ * 20201217 BB:  fixed a crash bug (and probable vulnerability) in large (MNG)
+ *               LOOP chunks
+ * 20210131 GRR: updated Makefile.mingw32 for modern versions and added
+ *               Makefile.mingw64 (targets Win64); both are essentially
+ *               UNTESTED, however!
+ * 20210131 GRR: released version 3.0.2
+ *               ----------------------
